--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,19 @@ html {
 body {
   
   margin: 0;
-  background-image: url('../images/fb.jpg')
+  background-image: url('../images/fb.jpg');
+   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-/*canvas {
+canvas {
   border: 3px dotted #45ffdd;
-}*/
-@-webkit-keyframes blink { 50% { border-color: #45ffdd;   }  }
+}
+/* @-webkit-keyframes blink { 50% { border-color: #45ffdd;   }  }
 canvas{ 
 	border: 4px solid;
 	-webkit-animation: blink .5s step-end infinite alternate; 
-}
+} */
 
 .game-intro{
   display: block;
